--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,71 @@
-// TODO
+.container {
+  width: 100%;
+  max-width: 1440px;
+
+  margin: 0 auto;
+
+  .banner {
+    width: 100%;
+    max-height: 25rem;
+
+    img {
+      display: block;
+      width: 100%;
+      max-height: 25rem;
+      object-fit: cover;
+    }
+  }
+}
+
+.content {
+  margin: 5rem auto;
+
+  h1 {
+    font-size: 3rem;
+    color: var(--gray-50);
+  }
+
+  .info {
+    margin-top: 1.5rem;
+  }
+
+  .postTextContainer {
+    margin-top: 4rem;
+
+    h1 {
+      font-size: 2.25rem;
+      line-height: 3.15rem;
+      margin-bottom: 3.5rem;
+    }
+
+    .postTextBody {
+      margin-bottom: 4.5rem;
+    }
+
+    p,
+    ul {
+      font-size: 1.125rem;
+      line-height: 1.575rem;
+      margin: 1.5rem 0;
+
+      text-align: justify;
+    }
+
+    li {
+      margin: 0.5rem 0;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+@media (max-width: 720px) {
+  .postTextContainer {
+    ul,
+    ol {
+      padding-left: 1.5rem;
+    }
+  }
+}
