--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,45 @@
   padding: 0;
 }
 
-// TODO
+:root {
+  --gray-50: #f8f8f8;
+  --gray-200: #d7d7d7;
+  --gray-300: #bbbbbb;
+  --gray-900: #1a1d23;
+
+  --pink: #ff57b2;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body {
+  background: var(--gray-900);
+  color: var(--gray-200);
+}
+
+body,
+input,
+textarea,
+button,
+select {
+  font-family: 'Inter', sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: var(--pink);
+  text-decoration: none;
+}
