Componente Header e revalidate

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,5 +1,17 @@
 .container {
   margin-bottom: 5rem;
+
+  .header {
+    height: 10.625rem;
+
+    display: flex;
+    align-items: center;
+
+    img {
+      width: 100%;
+      max-width: 15rem;
+    }
+  }
 }
 
 .loadMoreButton {
